--- a/tasks-demo/src/app/components/header/header.component.html
+++ b/tasks-demo/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="green" text="Add"></app-button>
+    <app-button color="green" text="Add" (btnClick)="toggleAddTask()"></app-button>
+    <!-- the (btnClick) is from 'button.component.ts', but the toggleAddTask() is a part of 'header.component.ts' -->
 </header>
